--- a/dist.ini
+++ b/dist.ini
@@ -13,13 +13,13 @@ version = 0.001
 [NextRelease]
 filename = Changes
 
-[@Git]
-allow_dirty = Changes
-allow_dirty = dist.ini
-allow_dirty = README.mkdn
-add_files_in = Changes
-add_files_in = dist.ini
-add_files_in = README.mkdn
+;[@Git]
+;allow_dirty = Changes
+;allow_dirty = dist.ini
+;allow_dirty = README.mkdn
+;add_files_in = Changes
+;add_files_in = dist.ini
+;add_files_in = README.mkdn
 
 [MetaResources]
 bugtracker.web  = https://github.com/xsawyerx/ref-util-rewriter/issues
