--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = MIT
 copyright_holder = Sawyer X
 copyright_year   = 2016
 
-version = 0.001
+version = 0.002
 
 [@Filter]
 -bundle = @Basic
@@ -12,6 +12,8 @@ version = 0.001
 
 [NextRelease]
 filename = Changes
+
+[PodWeaver]
 
 ;[@Git]
 ;allow_dirty = Changes
