--- a/dist.ini
+++ b/dist.ini
@@ -48,6 +48,8 @@ List::Util = 0
 Test::More              = 0.92
 Test::EOL               = 0
 Pod::Coverage::TrustPod = 0
+File::Temp              = 0
+File::Slurper           = 0
 
 ; for maintainers, see with mst how to avoid these
 ; strictures = 0
